--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,60 +1,8 @@
 body {
-	background-image:url(../images/fractal4k.jpg);
 	padding-bottom: 70px;
 }
 
- 
-.footer { 
-  background-color: #626262;
-  color: orange;
-}
-
-
-
-
-#logo {
-  text-align: center;
-  color: black;
-  padding: 5px;
-}
-
-.navbar-inverse .navbar-brand {
-	color: orange;
-}
-
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus 
-{
-	background-color: orange;
-}
-
-.clickable-row {
-	cursor: pointer;
-}
-
-/* Bilderna på styrelsen */
-.card {
-   background-color: orange;
-}
-.card img {
-	width: 100%;
-}
-
-#modal-image {
-	max-height: 70vh;
-}
-
-a, a:hover {
-	color: orange;
-	font-weight: bold;
-}
-
-#mathpanel {
-	position: fixed;
-	bottom: 0;
-	right: 50%;
-}
-
-/* -----inställningar för chatten ------------*/
+/* settings for the chat */
 #chat {
 	position: fixed;
 	right: 0px;
@@ -92,12 +40,7 @@ a, a:hover {
 	clip: rect(1em 1em 1em 1em);
 }
 
-.emathdisplaymode .emdisplaymode-content {
-	width: 100%;
-}
-
 #message {
 	height: auto;
 	overflow: inherit;
 }
-/* ------------------------------------------*/
