--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -40,6 +40,10 @@ body {
 	clip: rect(1em 1em 1em 1em);
 }
 
+.emathdisplaymode .emdisplaymode-content {
+	width: 100%;
+}
+
 #message {
 	height: auto;
 	overflow: inherit;
